--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -36,5 +36,6 @@
             </p>
         </div>
         <script src="popup.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script> -->
     </body>
 </html>
